--- a/LAB04/views/index.ejs
+++ b/LAB04/views/index.ejs
@@ -24,7 +24,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Sidhu Moosewala</h5>
                                 <p class="card-text">Sidhu Moosewala, born Shubhdeep Singh Sidhu, is a Punjabi singer, lyricist, and actor known for his impactful contributions to the Punjabi music industry. Hailing from Mansa, Punjab, Moosewala rose to fame with his distinctive style, addressing social issues through soulful and energetic Punjabi songs, making him a prominent figure in contemporary Punjabi music. His authenticity and storytelling have garnered widespread acclaim, establishing him as a leading voice in the genre....</p>
-                                <a href="./smw.ejs" class="btn btn-primary">Learn More</a>
+                                <a href="./smw" class="btn btn-primary">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -34,7 +34,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Karan Aujla</h5>
                                 <p class="card-text">Karan Aujla, a renowned Punjabi singer and songwriter, has left an indelible mark on the music industry with his distinct voice and impactful lyrics. Known for his versatile style, Aujla's compositions seamlessly blend Punjabi folk with contemporary beats, captivating audiences worldwide. His magnetic stage presence and chart-topping hits have solidified his position as a leading figure in the Punjabi music scene....</p>
-                                <a href="./aujla.ejs" class="btn btn-primary">Learn More</a>
+                                <a href="./aujla" class="btn btn-primary">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -44,7 +44,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Arjan Dhillon</h5>
                                 <p class="card-text">Arjan Dhillon is a Punjabi singer and lyricist known for his contributions to the Indian music industry. With a unique style and soulful voice, he has gained popularity for his hit Punjabi songs, captivating audiences with his artistic expressions and storytelling through music. Arjan Dhillon continues to be a rising star in the vibrant Punjabi music scene.......</p>
-                                <a href="./arjan.ejs" class="btn btn-primary">Learn More</a>
+                                <a href="./arjan" class="btn btn-primary">Learn More</a>
                             </div>
                         </div>
                     </div>
