added a js file

--- a/ASSIGNMENT02/views/index.hbs
+++ b/ASSIGNMENT02/views/index.hbs
@@ -1,142 +1,148 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Chef's </title>
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    />
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-      }
 
-            .card {
-        transition: transform 0.3s ease-in-out;
-      }
+<head>
+  <title>Chef's </title>
+    <script src="recipeForm.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
 
-      .card:hover {
-        transform: scale(1.05);
-      }
+    .card {
+      transition: transform 0.3s ease-in-out;
+    }
 
-    </style>
-  </head>
-  <body>
+    .card:hover {
+      transform: scale(1.05);
+    }
+  </style>
+</head>
+
+<body>
 
 
-    <section class="hero bg-info text-white text-center py-5">
-      <div class="container">
-        <h1 class="display-4">Flavors Unveiled: A Culinary Odyssey</h1>
-        <p class="lead">
-          Discover and enjoy the taste of some of my favourite recipes.
-        </p>
+  <section class="hero bg-info text-white text-center py-5">
+    <div class="container">
+      <h1 class="display-4">Flavors Unveiled: A Culinary Odyssey</h1>
+      <p class="lead">
+        Discover and enjoy the taste of some of my favourite recipes.
+      </p>
+    </div>
+  </section>
+
+  <div class="container my-5">
+    <div class="row">
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="card">
+          <img src="https://fingersareforburning.com/wp-content/uploads/2018/08/20180717235437_IMG_0414-01-01.jpeg"
+            alt="Paneer Lababdaar" />
+          <div class="card-body">
+            <h5 class="card-title">Paneer Lababdaar</h5>
+            <p class="card-text">
+              Paneer Lababdaar, a luxurious North Indian delicacy, showcases
+              succulent paneer cubes bathed in a velvety tomato gravy. Infused
+              with aromatic spices, this dish captivates the palate with its
+              delightful and indulgent flavor profile.
+            </p>
+            <a href="./recipe1" class="btn btn-info">Learn More</a>
+          </div>
+        </div>
       </div>
-    </section>
-
-    <div class="container my-5">
-      <div class="row">
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card">
-            <img src="https://fingersareforburning.com/wp-content/uploads/2018/08/20180717235437_IMG_0414-01-01.jpeg" alt="Paneer Lababdaar" />
-            <div class="card-body">
-              <h5 class="card-title">Paneer Lababdaar</h5>
-              <p class="card-text">
-                Paneer Lababdaar, a luxurious North Indian delicacy, showcases
-                succulent paneer cubes bathed in a velvety tomato gravy. Infused
-                with aromatic spices, this dish captivates the palate with its
-                delightful and indulgent flavor profile.
-              </p>
-              <a href="./recipe1" class="btn btn-info">Learn More</a>
-            </div>
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="card">
+          <img src="https://www.whiskaffair.com/wp-content/uploads/2019/05/Paneer-Butter-Masala-2-1.jpg"
+            class="card-img-top" alt="Paneer Butter Masala" />
+          <div class="card-body">
+            <h5 class="card-title">Paneer Butter Masala</h5>
+            <p class="card-text">
+              Paneer Butter Masala is a classic North Indian dish that
+              delights the palate with its creamy tomato-based gravy. Tender
+              paneer cubes are enveloped in a rich blend of buttery, spiced
+              goodness, creating a comforting and flavorful culinary
+              experience.
+            </p>
+            <a href="./recipe2" class="btn btn-info">Learn More</a>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card">
-            <img src="https://www.whiskaffair.com/wp-content/uploads/2019/05/Paneer-Butter-Masala-2-1.jpg" class="card-img-top" alt="Paneer Butter Masala" />
-            <div class="card-body">
-              <h5 class="card-title">Paneer Butter Masala</h5>
-              <p class="card-text">
-                Paneer Butter Masala is a classic North Indian dish that
-                delights the palate with its creamy tomato-based gravy. Tender
-                paneer cubes are enveloped in a rich blend of buttery, spiced
-                goodness, creating a comforting and flavorful culinary
-                experience.
-              </p>
-              <a href="./recipe2" class="btn btn-info">Learn More</a>
-            </div>
+      </div>
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="card">
+          <img src="https://i.pinimg.com/originals/bb/26/4c/bb264c9a5959ca5b492025ff05873850.jpg" class="card-img-top"
+            alt="Butter Chicken" />
+          <div class="card-body">
+            <h5 class="card-title">Butter Chicken</h5>
+            <p class="card-text">
+              A beloved Indian classic, butter chicken is tender chicken
+              dipped in a sumptuous mixture of rich tomato and butter sauce.
+              Its flavor profile is rich and decadent, with a symphony of
+              spices. This dish is a culinary marvel that is loved by all.
+            </p>
+            <a href="./recipe3" class="btn btn-info">Learn More</a>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card">
-            <img src="https://i.pinimg.com/originals/bb/26/4c/bb264c9a5959ca5b492025ff05873850.jpg" class="card-img-top" alt="Butter Chicken" />
-            <div class="card-body">
-              <h5 class="card-title">Butter Chicken</h5>
-              <p class="card-text">
-                A beloved Indian classic, butter chicken is tender chicken
-                dipped in a sumptuous mixture of rich tomato and butter sauce.
-                Its flavor profile is rich and decadent, with a symphony of
-                spices. This dish is a culinary marvel that is loved by all.
-              </p>
-              <a href="./recipe3" class="btn btn-info">Learn More</a>
-            </div>
+      </div>
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="card">
+          <img src="https://i.pinimg.com/736x/76/dd/b8/76ddb8d4f58472af4e27db441a27e423.jpg" class="card-img-top"
+            alt="Gajar Da Halwa" />
+          <div class="card-body">
+            <h5 class="card-title">Gajar Da Halwa</h5>
+            <p class="card-text">
+              A popular Indian dish called Gajar ka Halwa honours the idea of
+              grated carrots turned into a rich treat. This meal, which is
+              slow-cooked in ghee, milk, and sugar, is captivating due to its
+              rich, caramelized flavor and aromatic essence. This classic
+              treat, adorned with almonds, infuses sweetness and coziness into
+              every mouthful.
+            </p>
+            <a href="./recipe4" class="btn btn-info">Learn More</a>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card">
-            <img src="https://i.pinimg.com/736x/76/dd/b8/76ddb8d4f58472af4e27db441a27e423.jpg" class="card-img-top" alt="Gajar Da Halwa" />
-            <div class="card-body">
-              <h5 class="card-title">Gajar Da Halwa</h5>
-              <p class="card-text">
-                A popular Indian dish called Gajar ka Halwa honours the idea of
-                grated carrots turned into a rich treat. This meal, which is
-                slow-cooked in ghee, milk, and sugar, is captivating due to its
-                rich, caramelized flavor and aromatic essence. This classic
-                treat, adorned with almonds, infuses sweetness and coziness into
-                every mouthful.
-              </p>
-              <a href="./recipe4" class="btn btn-info">Learn More</a>
-            </div>
+      </div>
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="card">
+          <img src="https://incredible.kitchen/wp-content/uploads/2020/11/img_8363-668x1024.jpg" class="card-img-top"
+            alt="Khoye di Pinni" />
+          <div class="card-body">
+            <h5 class="card-title">Khoye Di Pinni</h5>
+            <p class="card-text">
+              A delicious delicacy made from a mixture of whole wheat flour,
+              ghee, jaggery, and almonds, pinni is a classic Punjabi sweet.
+              These delicious, bite-sized sweets are slow-cooked to perfection
+              and provide a beautiful combination of earthy sweetness and
+              nutty richness, making them a beloved treat at festivals and
+              festivities.
+            </p>
+            <a href="./recipe5" class="btn btn-info">Learn More</a>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card">
-            <img src="https://incredible.kitchen/wp-content/uploads/2020/11/img_8363-668x1024.jpg" class="card-img-top" alt="Khoye di Pinni" />
-            <div class="card-body">
-              <h5 class="card-title">Khoye Di Pinni</h5>
-              <p class="card-text">
-                A delicious delicacy made from a mixture of whole wheat flour,
-                ghee, jaggery, and almonds, pinni is a classic Punjabi sweet.
-                These delicious, bite-sized sweets are slow-cooked to perfection
-                and provide a beautiful combination of earthy sweetness and
-                nutty richness, making them a beloved treat at festivals and
-                festivities.
-              </p>
-              <a href="./recipe5" class="btn btn-info">Learn More</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card">
-            <img src="https://www.cubesnjuliennes.com/wp-content/uploads/2018/12/Sarson-Ka-saag-Recipe.jpg" class="card-img-top" alt="Sarson ka Saag" />
-            <div class="card-body">
-              <h5 class="card-title">Sarson Da Saag</h5>
-              <p class="card-text">
-                The traditional Punjabi meal sarson da saag highlights the vivid
-                flavors of mustard greens. Cooked gently with spices and
-                frequently served with Makki di Roti, a flatbread made of
-                cornmeal, this dish captures the hearty spirit of rural Punjab.
-                This nutrient-dense, full-flavored meal is a beloved winter
-                treat that honors agricultural origins.
-              </p>
-              <a href="./recipe6" class="btn btn-info">Learn More</a>
-            </div>
+      </div>
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="card">
+          <img src="https://www.cubesnjuliennes.com/wp-content/uploads/2018/12/Sarson-Ka-saag-Recipe.jpg"
+            class="card-img-top" alt="Sarson ka Saag" />
+          <div class="card-body">
+            <h5 class="card-title">Sarson Da Saag</h5>
+            <p class="card-text">
+              The traditional Punjabi meal sarson da saag highlights the vivid
+              flavors of mustard greens. Cooked gently with spices and
+              frequently served with Makki di Roti, a flatbread made of
+              cornmeal, this dish captures the hearty spirit of rural Punjab.
+              This nutrient-dense, full-flavored meal is a beloved winter
+              treat that honors agricultural origins.
+            </p>
+            <a href="./recipe6" class="btn btn-info">Learn More</a>
           </div>
         </div>
       </div>
     </div>
-<br>
-<br>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+  </div>
+  <br>
+  <br>
+
+</body>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </html>
