--- a/ASSIGNMENT02/views/add.hbs
+++ b/ASSIGNMENT02/views/add.hbs
@@ -68,6 +68,8 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
+    <script src="recipeForm.js"></script>
+    
     <br>
     <br>
 
