--- a/ASSIGNMENT02/views/layout.hbs
+++ b/ASSIGNMENT02/views/layout.hbs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   <style>
     body {
       background-color: #f8f9fa;
@@ -69,26 +69,29 @@
   </style>
 </head>
 
+
+{{!-- this here is a bootstrap based navbar edited it using some custom css --}}
 <body>
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Chef's Book</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="./add">Add new Recipe</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./contact">Contact Us</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./index">Chef's Book</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./user">Users</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contact">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   </header>
 
   <main>
@@ -105,8 +108,15 @@
     {{{body}}}
   </main>
 
-<br>
-<br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
   <footer class="footer">
     <div class="container">
